# demo-flappy-lambda

./: LICENSE  README.md  demo-flappy-lambda.cabal
app/: Main.hs
src/: FlappyLambda.hs
