name:                demo-flappy-lambda
version:             0.1
synopsis:            Игра «Flappy Lambda».
-- description:
homepage:            https://github.com/cmc-haskell-2017/demo-flappy-lambda#readme
license:             MIT
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2017 Nickolay Kudasov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     FlappyLambda
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , random
  default-language:    Haskell2010

executable demo-flappy-lambda
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , demo-flappy-lambda
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-flappy-lambda
